# linear-reg-implementation

./: CMakeLists.txt  README.md
python/: __init__.py  training_and_benchmarking.py
src/: bindings.cpp  linreg.cpp  linreg.hpp
